Alignment fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,8 +271,15 @@ ul.nav-menu li a{
 #contactPhoto{
   float:left;
   max-width:75%;
-  padding:15px;
+  padding-right:15px;
+  padding-bottom:15px;
+}
+#contactName{
+  font-size:18pt;
 }
 #contactBlurb{
-  padding:15px;
+  font-size:14pt;
+}
+.contactInfo{
+  text-align: right;
 }
